2008-10-12  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclCompile.c: fix bug in srcDelta encoding within
	ByteCodes. The bug can only be triggered under conditions that
	cannot happen in Tcl, but were met during development of L. Thanks
	go to Robert Netzer for diagnose and fix.

2008-10-10  Don Porter  <dgp@users.sourceforge.net>

	*** 8.6a3 TAGGED FOR RELEASE ***

	* changes:	Updates for 8.6a3 release.

2008-10-10  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclOODefineCmds.c (TclOODefineUnexportObjCmd)
	(TclOODefineExportObjCmd): Corrected export/unexport record synthesis.
	[Bug 2155658]

2008-10-08  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tclUnixChan.c:   Fix minor compiler warning.
	* unix/tcl.m4:          Fix for [Bug 2073255]
	* unix/configure:       Regenerated

2008-10-08  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic (TclInfoCoroutineCmd):
	* tests/unsupported.test: Arrange for [info coroutine] to return {}
	when a coroutine is running but the resume command has been deleted.
	[Bug 2153080]

2008-10-08  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclTrace.c:	Corrected handling of errors returned by
	variable traces so that the errorInfo value contains the original
	error message. [Bug 2151707]

	* generic/tclVar.c:	Revised implementation of TclObjVarErrMsg so
	that error message construction does not disturb an existing
	iPtr->errorInfo that may be in progress.

2008-10-07  Donal K. Fellows  <dkf@users.sf.net>

	* doc/binary.n: Added better documentation of the [binary encode] and
	[binary decode] subcommands.

2008-10-07  Miguel Sofer  <msofer@users.sf.net>

	TIP #327,#328 IMPLEMENTATIONS

	* generic/tclBasic.c:      Move [tailcall], [coroutine] and
	* generic/tclCmdIL.c:      [yield] out of ::tcl::unsupported
	* tclInt.h:
	* tests/info.test:         and into global scope: TIPs #327
	* tests/unsupported.test:  and #328

2008-10-07  Donal K. Fellows  <dkf@users.sf.net>
