@@ -1,3 +1,8 @@
+2008-10-13  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclOOInt.h: Added macro magic to make things work with
+	Objective C. [Bug 2163447]
+
 2008-10-12  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclCompile.c: fix bug in srcDelta encoding within
